--- a/css/search.css
+++ b/css/search.css
@@ -1,22 +1,18 @@
 body {
     background: linear-gradient(to bottom, rgba(0,0,0,0.3), rgba(0,0,0,0.7)), 
                 url("../images/backgroundtentangkami.png");
-    background-size: cover;
+    background-size: auto;
     background-position: center;
     background-repeat: no-repeat;
-    min-height: 100vh;
-    width: 100%;
+    height: 150vh;
+    height: auto;
+    background-attachment: fixed;
     box-sizing: border-box;
-    padding: 5rem 5%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-    padding-top: 80px;
+    padding-bottom: 5rem;
 }
 
 .search-results-container { 
-    max-width: 1200px; 
+    max-width: 1000px; 
     margin: 20px auto; 
     padding: 0 20px; 
 }
@@ -24,14 +20,14 @@ body {
 .result-card { 
     display: flex; 
     margin-bottom: 30px; 
-    background: #222; 
+    background: white; 
     padding: 20px; 
     border-radius: 8px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .result-card img { 
-    width: 150px; 
+    width: 250px; 
     height: 150px; 
     object-fit: cover; 
     border-radius: 4px; 
@@ -40,11 +36,11 @@ body {
 
 .result-info h2 { 
     color: #c74949; 
-    margin-top: 0; 
+    margin-top: 20px; 
 }
 
 .result-info p { 
-    margin: 5px 0; 
+    margin: 3px 0; 
     line-height: 1.6; 
 }
 
@@ -55,7 +51,7 @@ body {
 
 .btn-kembali-search { 
     display: inline-block; 
-    margin-bottom: 20px; 
+    margin: 40px 0 20px 0; 
     color: white; 
     text-decoration: none;
     font-size: 1.5rem;
