--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ section#beranda{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 0rem;
+    gap: 10px;
 }
 
 .search-container {
@@ -270,6 +270,31 @@ section#beranda{
 .tombolsearch button:hover {
     background: #c74949;
     border-color: #c74949;
+}
+
+.tombolsearch label[for="sort-select-home"] {
+    color: white;
+    font-size: 1rem;
+    font-weight: 500;
+    margin: 0 5px 0 0;
+}
+
+#sort-select-home {
+    padding: 0.7rem 1rem;
+    border-radius: 8px;
+    border: black 2px solid;
+    outline: none;
+    font-size: 1rem;
+    cursor: pointer;
+    background-color: white;
+    color: black;
+    transition: 0.3s;
+}
+
+#sort-select-home:hover {
+    background: #c74949;
+    border-color: #c74949;
+    color: white;
 }
 
 /*    <!-- Jeda -->    */
